fixes #2010 - Dataset View: button alignment problem                     - full width description + title                     - fixed share button container

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/css/indicator.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/css/indicator.css
@@ -420,10 +420,4 @@
 	width: 600px;
 }
 
-.align-bottom-right {
-	position:absolute;
-	bottom: 0px;
-	right: 0px;
-}
-
 /* END - Dataset specific styles */
